fix float bottom css

--- a/src/gunny/float_bottom/float_bottom.html.twig
+++ b/src/gunny/float_bottom/float_bottom.html.twig
@@ -2,8 +2,7 @@
 	{% set blockId = blockId|default("gunny_float_bottom") %}
 	{% set blockIdPostFix = blockIdPostFix|default("") %}
 	<div id="{{ blockId }}{{ blockIdPostFix }}" class="floatbottom {{ blockId }} scrollFrame scaleMobile scaleDesktop mobile" data-block-id="{{ blockId }}">
-		<div
-			class="floatbottom__background">
+		<div class="floatbottom__background">
 			{# NOTE: add background images and video here #}
 
 			<span id="{{ blockId }}{{ blockIdPostFix }}-scrollwatch-pin" class="scrollwatch-pin"></span>
