--- a/src/gunny/frame3/frame3.html.twig
+++ b/src/gunny/frame3/frame3.html.twig
@@ -45,7 +45,9 @@
 							<div id="item-5" class="effect__item key-E">item</div>
 						</div>
 					</div>
-					<div class="danh-sach"></div>
+					<div class="danh-sach">
+						<div ></div>
+					</div>
 				</div>
 				{# NOTE: add component's content here #}
 			</div>
