--- a/src/gunny/frame2/frame2.html.twig
+++ b/src/gunny/frame2/frame2.html.twig
@@ -15,7 +15,7 @@
 				src="gunny/frame2/images/title.png" alt="" class="title">
 				{# NOTE: add component's content here #}
 				<div class="ranking-top-container">
-					<div class="ranking-top ranking-2nd">
+					<div id="rank2-scrollWatch" class="ranking-top ranking-2nd">
 						<div class="crown"></div>
 						<div class="ranking-title">Username123</div>
 						<img src="gunny/frame2/images/ava-3rd.jpg" alt="">
@@ -28,7 +28,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="ranking-top ranking-1st">
+					<div id="rank1-scrollWatch" class="ranking-top ranking-1st">
 						<div class="crown"></div>
 						<div class="ranking-title">Username123</div>
 						<img src="gunny/frame2/images/ava-1st.jpg" alt="">
@@ -41,7 +41,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="ranking-top ranking-3rd">
+					<div id="rank3-scrollWatch" class="ranking-top ranking-3rd">
 						<div class="crown"></div>
 						<div class="ranking-title">Username123</div>
 						<img src="gunny/frame2/images/ava-2nd.jpg" alt="">
