--- a/src/gunny/frame3/frame3.html.twig
+++ b/src/gunny/frame3/frame3.html.twig
@@ -46,7 +46,75 @@
 						</div>
 					</div>
 					<div class="danh-sach">
-						<div ></div>
+						<h2 class="heading">THỢ SĂN MAY MẮN</h2>
+						<div id="danhSachSwiper" class="swiper">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="text-top">
+										<span class="username">Nam Vui Vẻ</span>
+										đã trúng
+									</div>
+									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
+								</div>
+							</div>
+							<div id="danhSachScrollbar" class"swiper-scrollbar swiper-scrollbar-drag"></div>
+						</div>
 					</div>
 				</div>
 				{# NOTE: add component's content here #}
