--- a/src/gunny/frame1/frame1.html.twig
+++ b/src/gunny/frame1/frame1.html.twig
@@ -16,15 +16,15 @@
 				<a href="#" class="gunny-logo">Logo</a>
 				<img data-src="gunny/frame1/images/title.png" alt="" class="lazyload title">
 				<img data-src="gunny/frame1/images/character.png" alt="" class="lazyload character">
-				<div class="prize1 prize"></div>
-				<div class="prize2 prize"></div>
-				<div class="prize3 prize"></div>
-				<div class="prize4 prize"></div>
-				<div class="prize5 prize"></div>
-				<div class="prize6 prize"></div>
-				<div class="prize7 prize"></div>
-				<a href="#" class="qua-sinh-nhat">Quà Sinh Nhật</a>
-				<a href="#" class="choi-ngay desktop">Chơi Ngay</a>
+				<div class="prize1 prize animate__animated animate__shakeY animate__infinite"></div>
+				<div class="prize2 prize animate__animated animate__shakeY animate__infinite animate__delay-1s"></div>
+				<div class="prize3 prize animate__animated animate__shakeY animate__infinite animate__delay-3s"></div>
+				<div class="prize4 prize animate__animated animate__shakeY animate__infinite animate__delay-1s"></div>
+				<div class="prize5 prize animate__animated animate__shakeY animate__infinite animate__delay-3s"></div>
+				<div class="prize6 prize animate__animated animate__shakeY animate__infinite animate__delay-5s"></div>
+				<div class="prize7 prize animate__animated animate__shakeY animate__infinite"></div>
+				<a href="#" class="qua-sinh-nhat animate__animated animate__pulse animate__infinite">Quà Sinh Nhật</a>
+				<a href="#" class="choi-ngay desktop animate__animated animate__pulse animate__infinite">Chơi Ngay</a>
 				<nav class="menu">
 					<ul>
 						<li class="menu-item" data-active>Trang Chủ</li>
