--- a/src/gunny/frame1/frame1.html.twig
+++ b/src/gunny/frame1/frame1.html.twig
@@ -23,7 +23,7 @@
 				<div class="prize5 prize animate__animated animate__shakeY animate__infinite animate__delay-3s"></div>
 				<div class="prize6 prize animate__animated animate__shakeY animate__infinite animate__delay-5s"></div>
 				<div class="prize7 prize animate__animated animate__shakeY animate__infinite"></div>
-				<a href="#" class="qua-sinh-nhat animate__animated animate__pulse animate__infinite">Quà Sinh Nhật</a>
+				<a href="#popup-confirm" class="qua-sinh-nhat animate__animated animate__pulse animate__infinite" data-fancybox>Quà Sinh Nhật</a>
 				<a href="#" class="choi-ngay desktop animate__animated animate__pulse animate__infinite">Chơi Ngay</a>
 				<nav class="menu">
 					<ul>
