--- a/src/prod/html/index.html.twig
+++ b/src/prod/html/index.html.twig
@@ -25,8 +25,14 @@
 		</div>
 
 		<div id="floating" class="floating">
-			{# {% include "../../gunny/float_left/float_left.html.twig" with {"blockIdPostFix": "_AB254VC"} %} #}
+			{% include "../../gunny/float_left/float_left.html.twig" with {"blockIdPostFix": "_AB54vC"} %}
 			{% include "../../gunny/float_bottom/float_bottom.html.twig" with {"blockIdPostFix": "_Ahj5u9"} %}
+		</div>
+		<div class="outer">
+			{% include '../../gunny/popup/html/popup_confirm.html.twig' with {"blockIdPostFix" : "_T2J5s"} %}
+			{% include '../../gunny/popup/html/popup_congrats.html.twig' with {"blockIdPostFix" : "_ythqK2"} %}
+			{% include '../../gunny/popup/html/popup_content.html.twig' with {"blockIdPostFix" : "_U2jsy8"} %}
+			{% include '../../gunny/popup/html/popup_signin.html.twig' with {"blockIdPostFix" : "_ajequ2"} %}
 		</div>
 		<div style="display: none;">
 			<div id="font-picker-primary" class="font-picker"></div>
