--- a/src/gunny/popup/html/popup_confirm.html.twig
+++ b/src/gunny/popup/html/popup_confirm.html.twig
@@ -5,8 +5,8 @@
 		<span id="{{ blockId }}{{ blockIdPostFix }}-scrollwatch-pin" class="scrollwatch-pin"></span>
 	</div>
 	<div class="popup__content">
-		<div class="popup-container">
-		<button class="close-btn">Close</button>
+		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
+			<button class="close-btn">Close</button>
 			<div class="center">
 				<div class="text-wrap">
 					<div class="text">Bạn có chắc đây là nhân vật bạn muốn</div>
