--- a/src/gunny/popup/html/popup_congrats.html.twig
+++ b/src/gunny/popup/html/popup_congrats.html.twig
@@ -5,7 +5,7 @@
 		<span id="{{ blockId }}{{ blockIdPostFix }}-scrollwatch-pin" class="scrollwatch-pin"></span>
 	</div>
 	<div class="popup__content">
-		<div class="popup-container">
+		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
 			<button class="close-btn">Close</button>
 			<div class="center">
 				<div class="heading">CHÚNG MỪNG BẠN ĐÃ NHẬN ĐƯỢC</div>
