--- a/src/gunny/float_bottom/float_bottom.html.twig
+++ b/src/gunny/float_bottom/float_bottom.html.twig
@@ -9,12 +9,24 @@
 		</div>
 		<div class="floatbottom__content">
 			<ul class="bottom">
-				<li class="bottom-text">Giới Thiệu</li>
-				<li class="bottom-text">Giải Thưởng</li>
-				<li class="bottom-text">Thể Lệ</li>
-				<li class="bottom-text">Hướng Dẫn</li>
-				<li class="bottom-text">Bảng Xếp Hạng</li>
-				<li class="bottom-text">Tham Gia</li>
+				<li class="bottom-text">
+					<a href="#" class="item1">Giới Thiệu</a>
+				</li>
+				<li class="bottom-text">
+					<a href="#" class="item2">Giải Thưởng</a>
+				</li>
+				<li class="bottom-text">
+					<a href="#" class="item3">Thể Lệ</a>
+				</li>
+				<li class="bottom-text">
+					<a href="#popup-content" class="item4" data-popup>Hướng Dẫn</a>
+				</li>
+				<li class="bottom-text">
+					<a href="#" class="item5">Bảng Xếp Hạng</a>
+				</li>
+				<li class="bottom-text">
+					<a href="#" class="item6">Tham Gia</a>
+				</li>
 			</ul>
 		</div>
 	</div>
