--- a/src/gunny/float_bottom/float_bottom.scss
+++ b/src/gunny/float_bottom/float_bottom.scss
@@ -22,14 +22,25 @@
 			gap: 10px;
 
 			.bottom-text {
-				color: white;
 				padding-top: 22px;
-				font-size: 26px;
 				flex-shrink: 0;
 				display: flex;
 				justify-content: center;
 				align-items: flex-start;
 				text-align: center;
+
+				a {
+					font-family: svnBango;
+					font-size: 22px;
+					color: white;
+					display: block;
+					width: 100%;
+					height: 100%;
+
+					&:hover {
+						color: rgb(252, 231, 0);
+					}
+				}
 			}
 		}
 	}
