--- a/src/gunny/float_left/float_left.html.twig
+++ b/src/gunny/float_left/float_left.html.twig
@@ -19,7 +19,7 @@
 					<a href="#" class="item3">Thể Lệ</a>
 				</li>
 				<li>
-					<a href="#" class="item4">Hướng Dẫn</a>
+					<a href="#popup-content" class="item4" data-popup>Hướng Dẫn</a>
 				</li>
 				<li>
 					<a href="#" class="item5">Bảng Xếp Hạng</a>
