--- a/src/gunny/frame3/frame3.html.twig
+++ b/src/gunny/frame3/frame3.html.twig
@@ -13,9 +13,9 @@
 			<div class="inner inner--{{ blockId }}">
 				<img src="gunny/frame3/images/title.png" alt="" class="title">
 				<div class="content-container">
-					<div class="mq5">
+					<div class="mq5" id="mq5-scrollWatch">
 						<div class="top-button-container">
-							<button>Đăng Xuất</button>
+							<a href="#popup-signin" class="signin-btn">Đăng Nhập</a>
 							<button>Lịch Sử</button>
 							<button>Nhận Lượt</button>
 						</div>
@@ -45,7 +45,7 @@
 							<div id="item-5" class="effect__item key-E">item</div>
 						</div>
 					</div>
-					<div class="danh-sach">
+					<div class="danh-sach" id="danhSach-scrollWatch">
 						<h2 class="heading">THỢ SĂN MAY MẮN</h2>
 						<div id="danhSachSwiper" class="swiper">
 							<div class="swiper-wrapper">
