--- a/src/gunny/popup/html/popup_signin.html.twig
+++ b/src/gunny/popup/html/popup_signin.html.twig
@@ -18,8 +18,8 @@
 						<input class="input" type="password"/>
 					</div>
 					<div class="button-container">
-						<button>Đăng Nhập</button>
-						<button>Nhập Lại</button>
+						<button type="button" class="signin-btn">Đăng Nhập</button>
+						<button type="button" class="clear-btn">Nhập Lại</button>
 					</div>
 				</form>
 				<div class="link-container">
