--- a/src/setup/scss/_common.scss
+++ b/src/setup/scss/_common.scss
@@ -393,7 +393,7 @@ hr.split {
 
 // fix fancybox
 
-.fancybox-active {
-	// height: auto !important;
-	height: 100% !important; // fix for fullpage swiper
-}
+// .fancybox-active {
+// 	// height: auto !important;
+// 	height: 100% !important; // fix for fullpage swiper
+// }
