--- a/src/gunny/popup/html/popup_congrats.html.twig
+++ b/src/gunny/popup/html/popup_congrats.html.twig
@@ -8,8 +8,8 @@
 		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
 			<button class="close-btn">Close</button>
 			<div class="center">
-				<div class="heading">CHÚNG MỪNG BẠN ĐÃ NHẬN ĐƯỢC</div>
-				<div class="prize prize-1"></div>
+				<div class="heading">CHÚC MỪNG BẠN ĐÃ NHẬN ĐƯỢC</div>
+				<div class="prize-container"></div>
 				<button class="btn">ĐỒNG Ý</button>
 			</div>
 		</div>
