--- a/src/gunny/frame1/frame1.scss
+++ b/src/gunny/frame1/frame1.scss
@@ -45,6 +45,10 @@
 		}
 	}
 
+	.bg-img {
+		object-fit: contain;
+	}
+
 	.gunny-logo {
 		@include image("sprite", $gunnylogo);
 		position: absolute;
