--- a/src/gunny/frame2/frame2.html.twig
+++ b/src/gunny/frame2/frame2.html.twig
@@ -18,7 +18,7 @@
 					<div id="rank2-scrollWatch" class="ranking-top ranking-2nd">
 						<div class="crown"></div>
 						<div class="ranking-title">Username123</div>
-						<img src="gunny/frame2/images/ava-3rd.jpg" alt="">
+						<img data-src="gunny/frame2/images/ava-3rd.jpg" alt="" class="lazyload">
 						<div class="text-container">
 							<div>Máy Chủ:
 								<span>Gunny 12</span>
@@ -31,7 +31,7 @@
 					<div id="rank1-scrollWatch" class="ranking-top ranking-1st">
 						<div class="crown"></div>
 						<div class="ranking-title">Username123</div>
-						<img src="gunny/frame2/images/ava-1st.jpg" alt="">
+						<img data-src="gunny/frame2/images/ava-1st.jpg" alt="" class="lazyload">
 						<div class="text-container">
 							<div>Máy Chủ:
 								<span>Gunny 12</span>
@@ -44,7 +44,7 @@
 					<div id="rank3-scrollWatch" class="ranking-top ranking-3rd">
 						<div class="crown"></div>
 						<div class="ranking-title">Username123</div>
-						<img src="gunny/frame2/images/ava-2nd.jpg" alt="">
+						<img data-src="gunny/frame2/images/ava-2nd.jpg" alt="" class="lazyload">
 						<div class="text-container">
 							<div>Máy Chủ:
 								<span>Gunny 12</span>
