rewrite promotion logic include speed change use async/await to avoid callback hell

--- a/prod/prod.css
+++ b/prod/prod.css
@@ -405,7 +405,7 @@
   align-items: flex-end;
   position: absolute;
   left: 50%;
-  top: 253px;
+  top: 193px;
   translate: -50% 0;
   z-index: 1;
 }
@@ -417,6 +417,7 @@
   }
 }
 .gunny_frame2 .ranking-top {
+  --animate-duration: 1s;
   background-image: url(../prod/gunny/frame2/images/ranking-frame.png);
   background-size: 100% 100%;
   position: relative;
@@ -742,7 +743,7 @@
 .gunny_frame3 .content-container {
   display: flex;
   position: absolute;
-  bottom: 50px;
+  bottom: 4px;
   left: 50%;
   translate: -50% 0;
 }
@@ -753,6 +754,7 @@
   }
 }
 .gunny_frame3 .content-container .mq5 {
+  --animate-duration: 1s;
   position: relative;
   background-image: url(../prod/gunny/frame3/images/mq5-container.png);
   background-size: 100% 100%;
@@ -941,6 +943,7 @@
   outline: none;
 }
 .gunny_frame3 .content-container .danh-sach {
+  --animate-duration: 1s;
   background-image: url(../prod/gunny/frame3/images/danh-sach-trung-thuong.png);
   width: 447px;
   height: 867px;
